--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+p br {
+  display: none;
+  /* height: 0.5rem; */
+}
+
